# VRChat-Discord-Mute

./: .gitignore  README.md
vrchat-discord-mute/: Cargo.toml  config.json
vrchat-discord-mute/src/: config.rs  from_desktop.rs  from_vrchat.rs  logging.rs  main.rs  timestamp.rs
