[package]
name = "vrchat-discord-mute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.9.1"
rdev = "0.5.2"
chrono = "0.4.23"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
